--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,8 @@
         "lineargradientnav",
         "primaryred",
         "secondaryturquoise",
+        "shestopal",
+        "taisiia",
         "tertiarygreen",
         "text-colour-primary",
         "textcolourprimary",
