Updated product page

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,11 @@
 {
     "cSpell.ignoreWords": [
+        "Authlink",
         "backgroundwhite",
         "colour",
         "colours",
         "ff-uberhand-pro",
+        "herobanner",
         "highlightorange",
         "lineargradientnav",
         "primaryred",
