--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,20 +1,45 @@
 {
     "cSpell.ignoreWords": [
         "Authlink",
+        "Babybliss",
+        "Babyblissonline",
+        "Noroff",
+        "accusam",
+        "aliquyam",
+        "amet",
         "backgroundwhite",
+        "clita",
         "colour",
         "colours",
+        "consetetur",
+        "dolore",
+        "eirmod",
+        "elitr",
+        "favbtn",
         "ff-uberhand-pro",
+        "gubergren",
         "herobanner",
         "highlightorange",
+        "invidunt",
+        "justo",
+        "kasd",
+        "labore",
         "lineargradientnav",
+        "nonumy",
         "primaryred",
+        "rebum",
+        "sadipscing",
         "secondaryturquoise",
         "shestopal",
         "taisiia",
+        "takimata",
+        "tempor",
         "tertiarygreen",
         "text-colour-primary",
         "textcolourprimary",
-        "textcoloursecondary"
+        "textcoloursecondary",
+        "vero",
+        "voluptua",
+        "Ørjan"
     ]
 }
