--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,7 @@
         "aliquyam",
         "amet",
         "backgroundwhite",
+        "clearbtn",
         "clita",
         "colour",
         "colours",
@@ -25,6 +26,7 @@
         "kasd",
         "labore",
         "lineargradientnav",
+        "nobasket",
         "nonumy",
         "primaryred",
         "rebum",
