--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,7 @@
         "aliquyam",
         "amet",
         "backgroundwhite",
+        "backgroundwhitetransparent",
         "clearbtn",
         "clita",
         "colour",
