updated with hotjar

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,7 +3,9 @@
         "Authlink",
         "Babybliss",
         "Babyblissonline",
+        "Hotjar",
         "Noroff",
+        "_hjSettings",
         "accusam",
         "aliquyam",
         "amet",
@@ -22,6 +24,8 @@
         "gubergren",
         "herobanner",
         "highlightorange",
+        "hjid",
+        "hjsv",
         "invidunt",
         "justo",
         "kasd",
