--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -31,6 +31,7 @@
         "kasd",
         "labore",
         "lineargradientnav",
+        "minibasket",
         "nobasket",
         "nonumy",
         "primaryred",
