updated after user feedback

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -45,6 +45,7 @@
         "tertiarygreen",
         "text-colour-primary",
         "textcolourprimary",
+        "textcolourprimarytransparent",
         "textcoloursecondary",
         "vero",
         "voluptua",
