updated with WCAG

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -39,6 +39,7 @@
         "sadipscing",
         "secondaryturquoise",
         "shestopal",
+        "tabindex",
         "taisiia",
         "takimata",
         "tempor",
