updated with new readme file

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -51,5 +51,13 @@
         "vero",
         "voluptua",
         "Ørjan"
+    ],
+    "cSpell.words": [
+        "CLOUDINARY",
+        "dudbduwaqcvuvr",
+        "dvfohuqco",
+        "oerjanberger",
+        "rdukeg",
+        "Strapi"
     ]
 }
